<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/last_count_textArea"
        style="@style/MyTextView"
        android:textColor="@color/slategray" />

    <EditText
        android:id="@+id/input_text_area"
        style="@style/MyEditText"
        android:hint="@string/hint"
        android:textColor="@color/black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <Button
                        android:id="@+id/operate_AC"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/AC"
                        android:textColor="#dc9859" />

                    <Button
                        android:id="@+id/operate_openParentheses"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/open" />

                    <Button
                        android:id="@+id/operate_closeParentheses"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/close" />

                    <Button
                        android:id="@+id/operate_divide"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/divide" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <Button
                        android:id="@+id/num7"
                        style="@style/MyButton"
                        android:text="@string/num7" />

                    <Button
                        android:id="@+id/num8"
                        style="@style/MyButton"
                        android:text="@string/num8" />

                    <Button
                        android:id="@+id/num9"
                        style="@style/MyButton"
                        android:text="@string/num9" />

                    <Button
                        android:id="@+id/operate_multiply"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/multiply" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <Button
                        android:id="@+id/num4"
                        style="@style/MyButton"
                        android:text="@string/num4" />

                    <Button
                        android:id="@+id/num5"
                        style="@style/MyButton"
                        android:text="@string/num5" />

                    <Button
                        android:id="@+id/num6"
                        style="@style/MyButton"
                        android:text="@string/num6" />

                    <Button
                        android:id="@+id/operate_minus"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/minus" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <Button
                        android:id="@+id/num1"
                        style="@style/MyButton"
                        android:text="@string/num1" />

                    <Button
                        android:id="@+id/num2"
                        style="@style/MyButton"
                        android:text="@string/num2" />

                    <Button
                        android:id="@+id/num3"
                        style="@style/MyButton"
                        android:text="@string/num3" />

                    <Button
                        android:id="@+id/operate_plus"
                        style="@style/MyButton"
                        android:background="@drawable/out_button_click"
                        android:text="@string/plus" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <TableRow>

                    <Button
                        android:id="@+id/operate_DEL"
                        style="@style/MyButton"
                        android:text="@string/DEl" />

                    <Button
                        android:id="@+id/num0"
                        style="@style/MyButton"
                        android:text="@string/zero" />

                    <Button
                        android:id="@+id/dot"
                        style="@style/MyButton"
                        android:text="@string/dot" />

                    <Button
                        android:id="@+id/operate_equal"
                        style="@style/MyButton"
                        android:background="@drawable/equal_click"
                        android:text="@string/equal" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>